--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_URL ='mongodb+srv://subha123:Shubha1998@cluster0.iwxas2s.mongodb.net/Blogging_Website'
-DB_NAME = 'Blogging_Website'
+DB_URL ='mongodb+srv://subha123:Shubha1998@cluster0.iwxas2s.mongodb.net/movie_review_Website'
+DB_NAME = 'movie_review_Website'
 USERNAME = 'subha123'
 PASSWORD = 'Shubha1998'
 PORT = '5900'
